3mlt el auto dimensions

--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -31,9 +31,9 @@
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/new_image_profile"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:layout_marginTop="8dp"
+            android:layout_width="@dimen/_120dp"
+            android:layout_height="@dimen/_120dp"
+            android:layout_marginTop="@dimen/_8dp"
             android:src="@drawable/profile_pic"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -46,23 +46,23 @@
             android:layout_marginTop="0dp"
             android:text="Change Photo"
             android:textColor="@color/colorAccent"
-            android:textSize="12sp"
+            android:textSize="@dimen/_12sp"
             android:textStyle="bold"
+            app:layout_constraintHorizontal_bias="0.501"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/new_image_profile"
-            app:layout_constraintHorizontal_bias="0.501" />
+            app:layout_constraintTop_toBottomOf="@+id/new_image_profile" />
 
         <TextView
             android:id="@+id/txt_information"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginLeft="@dimen/_8dp"
+            android:layout_marginStart="@dimen/_8dp"
+            android:layout_marginTop="@dimen/_8dp"
             android:text="PRIVATE INFORMATION"
             android:textColor="#808080"
-            android:textSize="15sp"
+            android:textSize="@dimen/_15sp"
             android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/changephoto" />
@@ -71,9 +71,9 @@
             android:id="@+id/image_user"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginLeft="@dimen/_8dp"
+            android:layout_marginStart="@dimen/_8dp"
+            android:layout_marginTop="@dimen/_16dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txt_information"
             app:srcCompat="@drawable/user" />
@@ -82,26 +82,26 @@
             android:id="@+id/txt_edit_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginLeft="@dimen/_16dp"
+            android:layout_marginRight="@dimen/_8dp"
+            android:layout_marginStart="@dimen/_16dp"
+            android:layout_marginTop="@dimen/_16dp"
             android:background="@null"
             android:hint="Enter name"
             android:inputType="textPersonName"
             android:textStyle="bold"
+            app:layout_constraintHorizontal_bias="0.181"
             app:layout_constraintLeft_toRightOf="@+id/image_user"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txt_information"
-            app:layout_constraintHorizontal_bias="0.181" />
+            app:layout_constraintTop_toBottomOf="@+id/txt_information" />
 
         <View
             android:id="@+id/v1"
             android:layout_width="0dp"
-            android:layout_height="1dp"
+            android:layout_height="@dimen/_1dp"
             android:layout_marginLeft="0dp"
             android:layout_marginRight="0dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="@dimen/_8dp"
             android:background="@color/tab_enable"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -111,9 +111,9 @@
             android:id="@+id/image_mail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginLeft="@dimen/_8dp"
+            android:layout_marginStart="@dimen/_8dp"
+            android:layout_marginTop="@dimen/_16dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/v1"
             app:srcCompat="@drawable/mail" />
@@ -122,10 +122,10 @@
             android:id="@+id/txt_edit_email"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginLeft="@dimen/_16dp"
+            android:layout_marginRight="@dimen/_8dp"
+            android:layout_marginStart="@dimen/_16dp"
+            android:layout_marginTop="@dimen/_16dp"
             android:background="@null"
             android:hint="Enter email"
             android:inputType="textEmailAddress"
@@ -137,10 +137,10 @@
         <View
             android:id="@+id/v2"
             android:layout_width="0dp"
-            android:layout_height="1dp"
+            android:layout_height="@dimen/_1dp"
             android:layout_marginLeft="0dp"
             android:layout_marginRight="0dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="@dimen/_8dp"
             android:background="@color/tab_enable"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -150,9 +150,9 @@
             android:id="@+id/image_pin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginLeft="@dimen/_8dp"
+            android:layout_marginStart="@dimen/_8dp"
+            android:layout_marginTop="@dimen/_16dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/v2"
             app:srcCompat="@drawable/pin_edit" />
@@ -161,26 +161,26 @@
             android:id="@+id/txt_edit_pin"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginLeft="@dimen/_16dp"
+            android:layout_marginRight="@dimen/_8dp"
+            android:layout_marginStart="@dimen/_16dp"
+            android:layout_marginTop="@dimen/_16dp"
             android:background="@null"
             android:hint="Country,Maintain its,Street"
             android:inputType="textPersonName"
             android:textStyle="bold"
+            app:layout_constraintHorizontal_bias="0.181"
             app:layout_constraintLeft_toRightOf="@+id/image_pin"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/v2"
-            app:layout_constraintHorizontal_bias="0.181" />
+            app:layout_constraintTop_toBottomOf="@+id/v2" />
 
         <View
             android:id="@+id/v3"
             android:layout_width="0dp"
-            android:layout_height="1dp"
+            android:layout_height="@dimen/_1dp"
             android:layout_marginLeft="0dp"
             android:layout_marginRight="0dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="@dimen/_8dp"
             android:background="@color/tab_enable"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -190,9 +190,9 @@
             android:id="@+id/image_phone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginLeft="@dimen/_16dp"
+            android:layout_marginStart="@dimen/_8dp"
+            android:layout_marginTop="@dimen/_16dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/v3"
             app:srcCompat="@drawable/phone" />
@@ -201,10 +201,10 @@
             android:id="@+id/txt_edit_phone"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginLeft="@dimen/_16dp"
+            android:layout_marginRight="@dimen/_8dp"
+            android:layout_marginStart="@dimen/_16dp"
+            android:layout_marginTop="@dimen/_16dp"
             android:background="@null"
             android:hint="Enter phone"
             android:inputType="phone"
@@ -216,10 +216,10 @@
         <View
             android:id="@+id/v4"
             android:layout_width="0dp"
-            android:layout_height="1dp"
+            android:layout_height="@dimen/_1dp"
             android:layout_marginLeft="0dp"
             android:layout_marginRight="0dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="@dimen/_8dp"
             android:background="@color/tab_enable"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
