--- a/app/src/main/res/layout/item_in_bottom_profile.xml
+++ b/app/src/main/res/layout/item_in_bottom_profile.xml
@@ -8,10 +8,10 @@
 
     <View
         android:id="@+id/view3"
-        android:layout_width="1dp"
+        android:layout_width="@dimen/_1dp"
         android:layout_height="0dp"
         android:layout_marginBottom="0dp"
-        android:layout_marginLeft="16dp"
+        android:layout_marginLeft="@dimen/_16dp"
         android:layout_marginTop="0dp"
         android:background="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -22,8 +22,8 @@
         android:id="@+id/image_ellipse_3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginLeft="@dimen/_10dp"
+        android:layout_marginTop="@dimen/_8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ellipse_3" />
@@ -32,8 +32,8 @@
         android:id="@+id/text_name_cause"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginLeft="@dimen/_16dp"
+        android:layout_marginTop="@dimen/_5dp"
         android:text="Amr Abdelhameed"
         android:textColor="#000000"
         android:textStyle="bold"
@@ -44,9 +44,9 @@
         android:id="@+id/image_switch"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginLeft="@dimen/_8dp"
+        android:layout_marginRight="@dimen/_8dp"
+        android:layout_marginTop="@dimen/_10dp"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toRightOf="@+id/text_name_cause"
         app:layout_constraintRight_toRightOf="parent"
@@ -57,9 +57,9 @@
         android:id="@+id/text_details_cause"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginLeft="@dimen/_16dp"
+        android:layout_marginRight="@dimen/_16dp"
+        android:layout_marginTop="@dimen/_8dp"
         android:text="hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh"
         android:textColor="#000000"
         android:visibility="gone"
@@ -73,8 +73,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="0dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginRight="@dimen/_8dp"
+        android:layout_marginTop="@dimen/_16dp"
         android:visibility="gone"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintLeft_toRightOf="@+id/view3"
@@ -86,9 +86,9 @@
         android:id="@+id/image_delete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginLeft="@dimen/_8dp"
+        android:layout_marginRight="@dimen/_8dp"
+        android:layout_marginTop="@dimen/_16dp"
         android:visibility="gone"
         app:layout_constraintLeft_toRightOf="@+id/image_close1"
         app:layout_constraintRight_toRightOf="parent"
@@ -99,10 +99,10 @@
         android:id="@+id/image_close1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="@dimen/_8dp"
         android:layout_marginLeft="0dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginRight="@dimen/_8dp"
+        android:layout_marginTop="@dimen/_16dp"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.488"
