--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -13,11 +13,11 @@
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/imagechangetpassword"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
+            android:layout_width="@dimen/_120dp"
+            android:layout_height="@dimen/_120dp"
             android:layout_marginLeft="0dp"
             android:layout_marginRight="0dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="@dimen/_8dp"
             android:src="@drawable/logo"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -29,14 +29,14 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/imagechangetpassword"
             android:layout_gravity="center"
-            android:layout_marginEnd="8dp"
+            android:layout_marginEnd="@dimen/_8dp"
             android:layout_marginLeft="0dp"
             android:layout_marginRight="0dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginStart="@dimen/_8dp"
+            android:layout_marginTop="@dimen/_8dp"
             android:text="Change password"
             android:textColor="#ffffff"
-            android:textSize="25sp"
+            android:textSize="@dimen/_25sp"
             android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -46,10 +46,10 @@
             android:id="@+id/linearLayout2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="@dimen/_8dp"
             android:background="#BB000000"
             android:orientation="vertical"
-            android:padding="8dp"
+            android:padding="@dimen/_8dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textchangepassword">
@@ -60,76 +60,76 @@
                 android:layout_height="50sp"
                 android:layout_centerHorizontal="true"
                 android:layout_gravity="center_horizontal|top"
-                android:layout_marginBottom="5dp"
+                android:layout_marginBottom="@dimen/_5dp"
                 android:background="@null"
                 android:drawableLeft="@drawable/message"
-                android:drawablePadding="15dp"
+                android:drawablePadding="@dimen/_15dp"
                 android:gravity="left"
                 android:hint="Email"
                 android:inputType="textEmailAddress"
-                android:padding="15dp"
+                android:padding="@dimen/_15dp"
                 android:textStyle="bold" />
 
             <View
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
+                android:layout_height="@dimen/_1dp"
                 android:background="@color/tab_enable" />
 
             <EditText
                 android:id="@+id/txt_code_newpass"
                 android:layout_width="match_parent"
-                android:layout_height="50sp"
+                android:layout_height="@dimen/_50sp"
                 android:layout_centerHorizontal="true"
                 android:layout_gravity="center_horizontal|top"
-                android:layout_marginBottom="5dp"
+                android:layout_marginBottom="@dimen/_5dp"
                 android:background="@null"
                 android:drawableLeft="@drawable/_eye"
-                android:drawablePadding="15dp"
+                android:drawablePadding="@dimen/_15dp"
                 android:gravity="left"
                 android:hint="Confirm code"
                 android:inputType="text"
-                android:padding="15dp"
+                android:padding="@dimen/_15dp"
                 android:textStyle="bold" />
 
             <View
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
+                android:layout_height="@dimen/_1dp"
                 android:background="@color/tab_enable" />
 
             <EditText
                 android:id="@+id/txtnewpass"
                 android:layout_width="match_parent"
-                android:layout_height="50sp"
+                android:layout_height="@dimen/_50sp"
                 android:layout_centerHorizontal="true"
                 android:layout_gravity="center_horizontal|top"
-                android:layout_marginBottom="5dp"
+                android:layout_marginBottom="@dimen/_5dp"
                 android:background="@null"
                 android:drawableLeft="@drawable/password"
-                android:drawablePadding="15dp"
+                android:drawablePadding="@dimen/_15dp"
                 android:gravity="left"
                 android:hint="New password"
                 android:inputType="textPassword"
-                android:padding="15dp"
+                android:padding="@dimen/_15dp"
                 android:textStyle="bold" />
 
             <View
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
+                android:layout_height="@dimen/_1dp"
                 android:background="@color/tab_enable" />
 
             <EditText
                 android:id="@+id/txtconfirmpass"
                 android:layout_width="match_parent"
-                android:layout_height="50sp"
+                android:layout_height="@dimen/_50sp"
                 android:layout_gravity="center_horizontal|top"
-                android:layout_marginBottom="5dp"
+                android:layout_marginBottom="@dimen/_5dp"
                 android:background="@null"
                 android:drawableLeft="@drawable/_eye"
-                android:drawablePadding="15dp"
+                android:drawablePadding="@dimen/_15dp"
                 android:gravity="left"
                 android:hint="Confirm password"
                 android:inputType="textPassword"
-                android:padding="15dp"
+                android:padding="@dimen/_15dp"
                 android:textStyle="bold" />
 
         </LinearLayout>
@@ -137,15 +137,15 @@
         <Button
             android:id="@+id/btn_changepassword"
             android:layout_width="0dp"
-            android:layout_height="75dp"
-            android:layout_marginBottom="8dp"
+            android:layout_height="@dimen/_75dp"
+            android:layout_marginBottom="@dimen/_8dp"
             android:layout_marginLeft="0dp"
             android:layout_marginRight="0dp"
             android:layout_marginTop="0dp"
             android:background="@color/colorAccent"
             android:text="Confirm"
             android:textAllCaps="false"
-            android:textSize="20sp"
+            android:textSize="@dimen/_20sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
