--- a/app/src/main/res/layout/activity_confirm_email.xml
+++ b/app/src/main/res/layout/activity_confirm_email.xml
@@ -13,9 +13,9 @@
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/imageconfirm"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:layout_marginTop="8dp"
+            android:layout_width="@dimen/_120dp"
+            android:layout_height="@dimen/_120dp"
+            android:layout_marginTop="@dimen/_8dp"
             android:src="@drawable/logo"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -27,10 +27,10 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/imageconfirm"
             android:layout_gravity="center"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="@dimen/_8dp"
             android:text="Confirm code"
             android:textColor="#ffffff"
-            android:textSize="25sp"
+            android:textSize="@dimen/_25sp"
             android:textStyle="bold"
             app:layout_constraintHorizontal_bias="0.502"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -43,15 +43,15 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/imageconfirm"
             android:layout_gravity="center"
-            android:layout_marginEnd="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginEnd="@dimen/_8dp"
+            android:layout_marginLeft="@dimen/_8dp"
+            android:layout_marginRight="@dimen/_8dp"
+            android:layout_marginStart="@dimen/_8dp"
+            android:layout_marginTop="@dimen/_8dp"
             android:gravity="center"
             android:text="In order to continue. you must confirm your email address :"
             android:textColor="@color/colorAccent"
-            android:textSize="15sp"
+            android:textSize="@dimen/_15sp"
             android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -61,10 +61,10 @@
             android:id="@+id/linearLayout3"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="@dimen/_24dp"
             android:background="#BB000000"
             android:orientation="vertical"
-            android:padding="8dp"
+            android:padding="@dimen/_8dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textcontinueconfirm">
@@ -72,17 +72,17 @@
             <EditText
                 android:id="@+id/txtconfirmcontinue"
                 android:layout_width="match_parent"
-                android:layout_height="50sp"
+                android:layout_height="@dimen/_50sp"
                 android:layout_centerHorizontal="true"
                 android:layout_gravity="center_horizontal|top"
-                android:layout_marginBottom="5dp"
+                android:layout_marginBottom="@dimen/_5dp"
                 android:background="@null"
                 android:drawableLeft="@drawable/_eye"
-                android:drawablePadding="15dp"
+                android:drawablePadding="@dimen/_15dp"
                 android:gravity="left"
                 android:hint="Enter your confirm code"
                 android:inputType="text"
-                android:padding="15dp"
+                android:padding="@dimen/_15dp"
                 android:textStyle="bold" />
 
         </LinearLayout>
@@ -90,12 +90,12 @@
         <Button
             android:id="@+id/btn_continue"
             android:layout_width="0dp"
-            android:layout_height="75dp"
-            android:layout_marginBottom="8dp"
+            android:layout_height="@dimen/_75dp"
+            android:layout_marginBottom="@dimen/_8dp"
             android:background="@color/colorAccent"
             android:text="Continue"
             android:textAllCaps="false"
-            android:textSize="20sp"
+            android:textSize="@dimen/_20sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
