--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,11 +13,11 @@
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/imagelogin"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
+            android:layout_width="@dimen/_120dp"
+            android:layout_height="@dimen/_120dp"
             android:layout_marginLeft="0dp"
             android:layout_marginRight="0dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="@dimen/_8dp"
             android:src="@drawable/logo"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -29,10 +29,10 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="0dp"
             android:layout_marginRight="0dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="@dimen/_8dp"
             android:text="Get involved"
             android:textColor="#ffffff"
-            android:textSize="25sp"
+            android:textSize="@dimen/_25sp"
             android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -44,10 +44,10 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="0dp"
             android:layout_marginRight="0dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="@dimen/_24dp"
             android:background="#BB000000"
             android:orientation="vertical"
-            android:padding="8dp"
+            android:padding="@dimen/_8dp"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -56,37 +56,37 @@
             <EditText
                 android:id="@+id/txtemaillogin"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="@dimen/_50dp"
                 android:layout_centerHorizontal="true"
                 android:layout_gravity="center_horizontal|top"
-                android:layout_marginBottom="5dp"
+                android:layout_marginBottom="@dimen/_5dp"
                 android:background="@null"
                 android:drawableLeft="@drawable/mail"
-                android:drawablePadding="15dp"
+                android:drawablePadding="@dimen/_15dp"
                 android:gravity="left"
                 android:hint="Email"
                 android:inputType="textEmailAddress"
-                android:padding="15dp"
+                android:padding="@dimen/_15dp"
                 android:textStyle="bold" />
 
             <View
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
+                android:layout_height="@dimen/_1dp"
                 android:background="@color/tab_enable" />
 
             <EditText
                 android:id="@+id/txtpasswordlogin"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="@dimen/_50dp"
                 android:layout_gravity="center_horizontal|top"
-                android:layout_marginBottom="5dp"
+                android:layout_marginBottom="@dimen/_5dp"
                 android:background="@null"
                 android:drawableLeft="@drawable/password"
-                android:drawablePadding="15dp"
+                android:drawablePadding="@dimen/_15dp"
                 android:gravity="left"
                 android:hint="Password"
                 android:inputType="textPassword"
-                android:padding="15dp"
+                android:padding="@dimen/_15dp"
                 android:textStyle="bold" />
 
         </LinearLayout>
@@ -95,24 +95,24 @@
             android:id="@+id/text_forget"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginLeft="@dimen/_8dp"
+            android:layout_marginRight="@dimen/_8dp"
+            android:layout_marginTop="@dimen/_8dp"
             android:text="Forget Passowrd"
             android:textColor="@color/colorAccent"
-            android:textSize="14sp"
+            android:textSize="@dimen/_14sp"
             android:textStyle="bold"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
             app:layout_constraintLeft_toRightOf="@+id/btn_login"
-            android:layout_marginLeft="8dp" />
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
         <ImageButton
             android:id="@+id/btn_login"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="@dimen/_75dp"
+            android:layout_height="@dimen/_75dp"
             android:layout_marginLeft="0dp"
             android:layout_marginRight="0dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="@dimen/_8dp"
             android:background="@drawable/oragnecircal"
             android:src="@drawable/download_right"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -123,14 +123,14 @@
             android:id="@+id/txt_toregister"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
+            android:layout_marginBottom="@dimen/_8dp"
             android:layout_marginLeft="0dp"
             android:layout_marginRight="0dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="@dimen/_8dp"
             android:gravity="center"
             android:text="Don't have ana accounts?Sign Up"
             android:textColor="@color/colorAccent"
-            android:textSize="15sp"
+            android:textSize="@dimen/_15sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
