--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -14,11 +14,11 @@
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/imageregister"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
+            android:layout_width="@dimen/_120dp"
+            android:layout_height="@dimen/_120dp"
             android:layout_marginLeft="0dp"
             android:layout_marginRight="0dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="@dimen/_8dp"
             android:src="@drawable/circle_shape"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -30,10 +30,10 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="0dp"
             android:layout_marginRight="0dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="@dimen/_16dp"
             android:background="#BB000000"
             android:orientation="vertical"
-            android:padding="8dp"
+            android:padding="@dimen/_8dp"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -42,58 +42,58 @@
             <EditText
                 android:id="@+id/txtusernameregister"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="@dimen/_50dp"
                 android:layout_centerHorizontal="true"
                 android:layout_gravity="center_horizontal|top"
-                android:layout_marginBottom="5dp"
+                android:layout_marginBottom="@dimen/_5dp"
                 android:background="@null"
                 android:drawableLeft="@drawable/usernameimage"
-                android:drawablePadding="15dp"
+                android:drawablePadding="@dimen/_15dp"
                 android:gravity="left"
                 android:hint="Username"
 
                 android:inputType="textPersonName"
-                android:padding="15dp"
+                android:padding="@dimen/_15dp"
                 android:textStyle="bold" />
 
             <View
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
+                android:layout_height="@dimen/_1dp"
                 android:background="@color/tab_enable" />
 
             <EditText
                 android:id="@+id/txtpasswordregister"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="@dimen/_50dp"
                 android:layout_gravity="center_horizontal|top"
-                android:layout_marginBottom="5dp"
+                android:layout_marginBottom="@dimen/_5dp"
                 android:background="@null"
                 android:drawableLeft="@drawable/password"
-                android:drawablePadding="15dp"
+                android:drawablePadding="@dimen/_15dp"
                 android:gravity="left"
                 android:hint="Password"
                 android:inputType="textPassword"
-                android:padding="15dp"
+                android:padding="@dimen/_15dp"
                 android:textStyle="bold" />
 
             <View
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
+                android:layout_height="@dimen/_1dp"
                 android:background="@color/tab_enable" />
 
             <EditText
                 android:id="@+id/txtemailregister"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="@dimen/_50dp"
                 android:layout_gravity="center_horizontal|top"
-                android:layout_marginBottom="5dp"
+                android:layout_marginBottom="@dimen/_5dp"
                 android:background="@null"
                 android:drawableLeft="@drawable/message"
-                android:drawablePadding="15dp"
+                android:drawablePadding="@dimen/_15dp"
                 android:gravity="left"
                 android:hint="Email"
                 android:inputType="textEmailAddress"
-                android:padding="15dp"
+                android:padding="@dimen/_15dp"
                 android:textStyle="bold" />
 
         </LinearLayout>
@@ -101,14 +101,14 @@
         <Button
             android:id="@+id/btn_register"
             android:layout_width="0dp"
-            android:layout_height="75dp"
+            android:layout_height="@dimen/_75dp"
             android:layout_marginLeft="0dp"
             android:layout_marginRight="0dp"
             android:layout_marginTop="0dp"
             android:background="@color/colorAccent"
             android:text="Sign Up"
             android:textAllCaps="false"
-            android:textSize="20sp"
+            android:textSize="@dimen/_20sp"
             android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -120,11 +120,11 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="0dp"
             android:layout_marginRight="0dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="@dimen/_8dp"
             android:gravity="center"
             android:text="Or"
             android:textColor="#ffffff"
-            android:textSize="20sp"
+            android:textSize="@dimen/_20sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/btn_register" />
@@ -133,10 +133,10 @@
             android:id="@+id/btn_login_facebok"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
+            android:layout_marginBottom="@dimen/_8dp"
             android:layout_marginLeft="0dp"
             android:layout_marginRight="0dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="@dimen/_8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -147,10 +147,10 @@
             android:id="@+id/txt_to_changeimage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginBottom="@dimen/_8dp"
+            android:layout_marginLeft="@dimen/_8dp"
+            android:layout_marginRight="@dimen/_8dp"
+            android:layout_marginTop="@dimen/_8dp"
             android:text="Upload image"
             android:textColor="#AAffffff"
             app:layout_constraintBottom_toBottomOf="@+id/imageregister"
