--- a/app/src/main/res/layout/item_in_causes.xml
+++ b/app/src/main/res/layout/item_in_causes.xml
@@ -7,9 +7,9 @@
 
     <View
         android:id="@+id/view2"
-        android:layout_width="1dp"
+        android:layout_width="@dimen/_1dp"
         android:layout_height="0dp"
-        android:layout_marginLeft="30dp"
+        android:layout_marginLeft="@dimen/_30dp"
         android:layout_marginTop="0dp"
         android:background="@color/tab_enable"
         app:layout_constraintBottom_toTopOf="@+id/image_cause"
@@ -20,10 +20,10 @@
         android:id="@+id/btn_donate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="@dimen/_8dp"
         android:layout_marginLeft="0dp"
         android:layout_marginRight="0dp"
-        android:layout_marginTop="23dp"
+        android:layout_marginTop="@dimen/_23dp"
         android:background="@drawable/btn"
         android:text="Donate"
         android:textAllCaps="false"
@@ -40,10 +40,10 @@
         android:id="@+id/image_user_cause"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginBottom="@dimen/_8dp"
+        android:layout_marginLeft="@dimen/_8dp"
+        android:layout_marginStart="@dimen/_8dp"
+        android:layout_marginTop="@dimen/_8dp"
         android:layout_weight="1"
         android:src="@drawable/avatar_1"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -55,10 +55,10 @@
         android:id="@+id/linearLayout10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginStart="13dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginBottom="@dimen/_8dp"
+        android:layout_marginLeft="@dimen/_8dp"
+        android:layout_marginStart="@dimen/_8dp"
+        android:layout_marginTop="@dimen/_8dp"
         android:layout_weight="1"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -72,7 +72,7 @@
             android:layout_height="wrap_content"
             android:text="Adam Grason"
             android:textColor="@color/tab_enable"
-            android:textSize="20sp"
+            android:textSize="@dimen/_20sp"
             android:textStyle="bold" />
 
         <TextView
@@ -80,15 +80,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="I am acollector donations of Ramadan"
-            android:textSize="12sp"
+            android:textSize="@dimen/_12sp"
             android:textStyle="bold" />
     </LinearLayout>
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/image_cause"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="@dimen/_120dp"
+        android:layout_height="@dimen/_120dp"
+        android:layout_marginTop="@dimen/_8dp"
         android:src="@drawable/layer_2"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -96,10 +96,10 @@
 
     <View
         android:id="@+id/view"
-        android:layout_width="1dp"
+        android:layout_width="@dimen/_1dp"
         android:layout_height="0dp"
         android:layout_marginBottom="0dp"
-        android:layout_marginLeft="30dp"
+        android:layout_marginLeft="@dimen/_30dp"
         android:background="@color/tab_enable"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -109,14 +109,14 @@
         android:id="@+id/cause__details"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginEnd="@dimen/_8dp"
+        android:layout_marginLeft="@dimen/_8dp"
+        android:layout_marginRight="@dimen/_8dp"
+        android:layout_marginStart="@dimen/_8dp"
+        android:layout_marginTop="@dimen/_8dp"
         android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua"
         android:textColor="@color/tab_enable"
-        android:textSize="11sp"
+        android:textSize="@dimen/_11sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toRightOf="@+id/view"
         app:layout_constraintRight_toRightOf="parent"
@@ -126,9 +126,9 @@
         android:id="@+id/linearLayout11"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginLeft="@dimen/_8dp"
+        android:layout_marginRight="@dimen/_8dp"
+        android:layout_marginTop="@dimen/_8dp"
         android:orientation="horizontal"
         android:weightSum="2"
         app:layout_constraintLeft_toRightOf="@+id/view"
@@ -153,7 +153,7 @@
                 android:id="@+id/text_NEEDED"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="@dimen/_8dp"
                 android:layout_weight="1"
                 android:text="NEEDED 3000LE"
                 android:textStyle="bold" />
