--- a/app/src/main/res/layout/item_in_home.xml
+++ b/app/src/main/res/layout/item_in_home.xml
@@ -21,11 +21,11 @@
 
     <ImageButton
         android:id="@+id/image_switch"
-        android:layout_width="50dp"
+        android:layout_width="@dimen/_50dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="@dimen/_8dp"
         android:layout_marginRight="0dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="@dimen/_8dp"
         android:background="@drawable/side"
         android:src="@drawable/download_right"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -39,13 +39,13 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="0dp"
         android:layout_marginLeft="0dp"
-        android:layout_marginRight="8dp"
+        android:layout_marginRight="@dimen/_8dp"
         android:background="@drawable/title"
         android:gravity="center|left"
-        android:paddingBottom="10dp"
-        android:paddingLeft="10dp"
-        android:paddingRight="50dp"
-        android:paddingTop="10dp"
+        android:paddingBottom="@dimen/_10dp"
+        android:paddingLeft="@dimen/_10dp"
+        android:paddingRight="@dimen/_50dp"
+        android:paddingTop="@dimen/_10dp"
         android:text="hhhhhhhh"
         android:textAllCaps="false"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -62,8 +62,8 @@
         android:layout_marginTop="0dp"
         android:background="@drawable/rectangle_shape"
         android:orientation="vertical"
+        android:visibility="visible"
         android:weightSum="3"
-        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent">
