--- a/app/src/main/res/layout/item_in_notification.xml
+++ b/app/src/main/res/layout/item_in_notification.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_margin="5dp"
+        android:layout_margin="@dimen/_5dp"
         android:orientation="horizontal">
 
         <TextView
@@ -36,11 +36,11 @@
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/friends_pic"
                 android:layout_width="0dp"
-                android:layout_height="50dp"
-                android:layout_marginBottom="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
+                android:layout_height="@dimen/_50dp"
+                android:layout_marginBottom="@dimen/_8dp"
+                android:layout_marginLeft="@dimen/_8dp"
+                android:layout_marginStart="@dimen/_8dp"
+                android:layout_marginTop="@dimen/_8dp"
                 android:layout_weight="1"
                 android:src="@drawable/avatar"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -51,13 +51,13 @@
                 android:id="@+id/friends_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginBottom="@dimen/_8dp"
+                android:layout_marginLeft="@dimen/_8dp"
+                android:layout_marginStart="@dimen/_8dp"
+                android:layout_marginTop="@dimen/_8dp"
                 android:layout_weight="1"
                 android:text="Karen"
-                android:textSize="20sp"
+                android:textSize="@dimen/_20sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toRightOf="@+id/friends_pic"
@@ -67,14 +67,14 @@
                 android:id="@+id/tending"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginBottom="@dimen/_8dp"
+                android:layout_marginEnd="@dimen/_8dp"
+                android:layout_marginRight="@dimen/_8dp"
+                android:layout_marginTop="@dimen/_8dp"
                 android:layout_weight="1"
                 android:gravity="right"
                 android:text="TENDING NOW"
-                android:textSize="12sp"
+                android:textSize="@dimen/_12sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
@@ -89,7 +89,7 @@
 
             <View
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
+                android:layout_height="@dimen/_1dp"
                 android:background="@color/tab_enable" />
 
         </LinearLayout>
@@ -101,10 +101,10 @@
             <ImageView
                 android:id="@+id/image_pin"
                 android:layout_width="0dp"
-                android:layout_height="50dp"
-                android:layout_marginBottom="8dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="8dp"
+                android:layout_height="@dimen/_50dp"
+                android:layout_marginBottom="@dimen/_8dp"
+                android:layout_marginLeft="@dimen/_10dp"
+                android:layout_marginTop="@dimen/_8dp"
                 android:layout_weight="1"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
@@ -114,9 +114,9 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginBottom="@dimen/_8dp"
+                android:layout_marginLeft="@dimen/_8dp"
+                android:layout_marginTop="@dimen/_8dp"
                 android:layout_weight="1"
                 android:orientation="vertical"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -128,7 +128,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Joe's Bar"
-                    android:textSize="20sp"
+                    android:textSize="@dimen/_20sp"
                     android:textStyle="bold" />
 
                 <TextView
@@ -136,16 +136,16 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="95 Baumbach Fals"
-                    android:textSize="12sp"
+                    android:textSize="@dimen/_12sp"
                     android:textStyle="bold" />
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginBottom="@dimen/_8dp"
+                android:layout_marginRight="@dimen/_8dp"
+                android:layout_marginTop="@dimen/_8dp"
                 android:layout_weight="1"
                 android:orientation="vertical"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -158,7 +158,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="right"
                     android:text="0.3 mi"
-                    android:textSize="15sp"
+                    android:textSize="@dimen/_15sp"
                     android:textStyle="bold" />
 
                 <TextView
@@ -168,7 +168,7 @@
                     android:gravity="right"
                     android:text="PUB"
                     android:textColor="@color/colorAccent"
-                    android:textSize="12sp"
+                    android:textSize="@dimen/_12sp"
                     android:textStyle="bold" />
             </LinearLayout>
 
