3mlt el design bta3 el user_details lma ykon 3ml search 3alh fel search people

--- a/app/src/main/res/layout/content_add_cause.xml
+++ b/app/src/main/res/layout/content_add_cause.xml
@@ -84,9 +84,9 @@
             android:id="@+id/image_name_addcause"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
+            android:layout_marginLeft="@dimen/_16dp"
             android:layout_marginStart="@dimen/_16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="@dimen/_16dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txt_add_description_addcause"
             app:srcCompat="@drawable/profile_group" />
@@ -95,10 +95,10 @@
             android:id="@+id/name_addcause"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="8dp"
+            android:layout_marginLeft="@dimen/_16dp"
+            android:layout_marginRight="@dimen/_8dp"
             android:layout_marginStart="@dimen/_16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="@dimen/_16dp"
             android:background="@null"
             android:hint="Name cause"
             android:inputType="textPersonName"
@@ -123,8 +123,8 @@
             android:id="@+id/image_amount_addcause"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginLeft="@dimen/_16dp"
+            android:layout_marginTop="@dimen/_16dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/v1"
             app:srcCompat="@drawable/amount" />
