--- a/app/src/main/res/layout/content_edit_cause.xml
+++ b/app/src/main/res/layout/content_edit_cause.xml
@@ -85,9 +85,9 @@
             android:id="@+id/image_name_editcause"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
+            android:layout_marginLeft="@dimen/_16dp"
             android:layout_marginStart="@dimen/_16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="@dimen/_16dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txt_add_description_editcause"
             app:srcCompat="@drawable/profile_group" />
@@ -96,10 +96,10 @@
             android:id="@+id/name_editcause"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="8dp"
+            android:layout_marginLeft="@dimen/_16dp"
+            android:layout_marginRight="@dimen/_8dp"
             android:layout_marginStart="@dimen/_16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="@dimen/_16dp"
             android:background="@null"
             android:hint="Name cause"
             android:inputType="textPersonName"
