zbat 7agat fel design w 7atet toolbar lel show user details w 7atetlo el menu w gebt el current date w 7ateto fe toast gwa el menu fe action el report

--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -7,7 +7,7 @@
     android:background="@drawable/bg"
     tools:context="com.example.amr.sunbula.SplashActivity">
 
-    <de.hdodenhof.circleimageview.CircleImageView
+    <ImageView
         android:id="@+id/image_splash"
         android:layout_width="@dimen/_120dp"
         android:layout_height="@dimen/_120dp"
