--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/backgroundall"
+    android:background="@drawable/bg"
     android:orientation="vertical"
     android:weightSum="2"
     tools:context="com.example.amr.sunbula.Fragment.ProfileFragment">
@@ -33,7 +33,7 @@
             android:layout_marginLeft="@dimen/_8dp"
             android:layout_marginRight="@dimen/_8dp"
             android:layout_marginStart="@dimen/_8dp"
-            android:text="Rossy Loard"
+            android:text="Name"
             android:textSize="@dimen/_20sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
