--- a/app/src/main/res/layout/item_in_bottom_profile.xml
+++ b/app/src/main/res/layout/item_in_bottom_profile.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="#ffffff">
+    android:layout_height="wrap_content">
 
     <View
         android:id="@+id/view3"
@@ -32,21 +31,26 @@
         android:id="@+id/text_name_cause"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/_16dp"
-        android:layout_marginTop="@dimen/_5dp"
+        android:layout_marginBottom="@dimen/_8dp"
+        android:layout_marginLeft="@dimen/_8dp"
+        android:layout_marginTop="@dimen/_8dp"
         android:text="Amr Abdelhameed"
         android:textColor="#000000"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@+id/image_ellipse_3"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
         android:id="@+id/image_switch"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/_8dp"
         android:layout_marginLeft="@dimen/_8dp"
         android:layout_marginRight="@dimen/_8dp"
-        android:layout_marginTop="@dimen/_10dp"
+        android:layout_marginTop="@dimen/_8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toRightOf="@+id/text_name_cause"
         app:layout_constraintRight_toRightOf="parent"
