--- a/app/src/main/res/layout/item_in_causes.xml
+++ b/app/src/main/res/layout/item_in_causes.xml
@@ -2,8 +2,7 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="#BB000000">
+    android:layout_height="wrap_content">
 
     <View
         android:id="@+id/view2"
@@ -139,22 +138,20 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:orientation="horizontal"
-            android:weightSum="2">
+            android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/image_amount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 app:srcCompat="@drawable/amount_in_item" />
 
             <TextView
                 android:id="@+id/text_NEEDED"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_8dp"
-                android:layout_weight="1"
+                android:layout_marginLeft="@dimen/_8dp"
+                android:gravity="center"
                 android:text="NEEDED 3000LE"
                 android:textStyle="bold" />
 
@@ -164,20 +161,18 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:orientation="horizontal"
-            android:weightSum="2">
+            android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/image_calendar"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 app:srcCompat="@drawable/calendar_item" />
 
             <LinearLayout
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_marginLeft="@dimen/_8dp"
                 android:orientation="vertical"
                 android:weightSum="2">
 
