--- a/app/src/main/res/layout/item_in_home.xml
+++ b/app/src/main/res/layout/item_in_home.xml
@@ -62,6 +62,7 @@
         android:layout_marginTop="0dp"
         android:background="@drawable/rectangle_shape"
         android:orientation="vertical"
+        android:padding="@dimen/_8dp"
         android:visibility="gone"
         android:weightSum="3"
         app:layout_constraintBottom_toBottomOf="parent"
