--- a/app/src/main/res/layout/activity_confirm_email.xml
+++ b/app/src/main/res/layout/activity_confirm_email.xml
@@ -61,29 +61,47 @@
             android:id="@+id/linearLayout3"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_24dp"
-            android:background="#BB000000"
             android:orientation="vertical"
-            android:padding="@dimen/_8dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textcontinueconfirm">
 
-            <EditText
-                android:id="@+id/txtconfirmcontinue"
+            <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/_50sp"
-                android:layout_centerHorizontal="true"
-                android:layout_gravity="center_horizontal|top"
-                android:layout_marginBottom="@dimen/_5dp"
-                android:background="@null"
-                android:drawableLeft="@drawable/_eye"
-                android:drawablePadding="@dimen/_15dp"
-                android:gravity="left"
-                android:hint="Enter your confirm code"
-                android:inputType="text"
-                android:padding="@dimen/_15dp"
-                android:textStyle="bold" />
+                android:layout_height="match_parent"
+                android:layout_marginTop="@dimen/_8dp"
+                android:background="#BB000000"
+                android:padding="@dimen/_8dp">
+
+                <ImageView
+                    android:id="@+id/imageView6"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/_8dp"
+                    android:layout_marginStart="@dimen/_8dp"
+                    android:layout_marginTop="@dimen/_8dp"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:srcCompat="@drawable/_eye" />
+
+                <EditText
+                    android:id="@+id/txtconfirmcontinue"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/_8dp"
+                    android:layout_marginLeft="@dimen/_8dp"
+                    android:layout_marginRight="@dimen/_8dp"
+                    android:layout_marginTop="@dimen/_8dp"
+                    android:background="@null"
+                    android:hint="Enter your confirm code"
+                    android:inputType="text"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintLeft_toRightOf="@+id/imageView6"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+            </android.support.constraint.ConstraintLayout>
 
         </LinearLayout>
 
