--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -42,52 +42,76 @@
             android:id="@+id/linearLayout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="0dp"
-            android:layout_marginRight="0dp"
-            android:layout_marginTop="@dimen/_24dp"
-            android:background="#BB000000"
             android:orientation="vertical"
-            android:padding="@dimen/_8dp"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textlogin">
 
-            <EditText
-                android:id="@+id/txtemaillogin"
+            <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/_50dp"
-                android:layout_centerHorizontal="true"
-                android:layout_gravity="center_horizontal|top"
-                android:layout_marginBottom="@dimen/_5dp"
-                android:background="@null"
-                android:drawableLeft="@drawable/mail"
-                android:drawablePadding="@dimen/_15dp"
-                android:gravity="left"
-                android:hint="Email"
-                android:inputType="textEmailAddress"
-                android:padding="@dimen/_15dp"
-                android:textStyle="bold" />
+                android:layout_height="match_parent"
+                android:layout_marginTop="@dimen/_8dp"
+                android:background="#BB000000"
+                android:padding="@dimen/_8dp">
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_1dp"
-                android:background="@color/tab_enable" />
+                <ImageView
+                    android:id="@+id/imageView8"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginTop="16dp"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/view6"
+                    app:srcCompat="@drawable/password" />
 
-            <EditText
-                android:id="@+id/txtpasswordlogin"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_50dp"
-                android:layout_gravity="center_horizontal|top"
-                android:layout_marginBottom="@dimen/_5dp"
-                android:background="@null"
-                android:drawableLeft="@drawable/password"
-                android:drawablePadding="@dimen/_15dp"
-                android:gravity="left"
-                android:hint="Password"
-                android:inputType="textPassword"
-                android:padding="@dimen/_15dp"
-                android:textStyle="bold" />
+                <ImageView
+                    android:id="@+id/imageView7"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginTop="8dp"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:srcCompat="@drawable/mail" />
+
+                <EditText
+                    android:id="@+id/txtemaillogin"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginRight="8dp"
+                    android:layout_marginTop="8dp"
+                    android:background="@null"
+                    android:hint="Email"
+                    android:inputType="textEmailAddress"
+                    android:textStyle="bold"
+                    app:layout_constraintLeft_toRightOf="@+id/imageView7"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <View
+                    android:id="@+id/view6"
+                    android:layout_width="0dp"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="@dimen/_8dp"
+                    android:background="@color/tab_enable"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/txtemaillogin" />
+
+                <EditText
+                    android:id="@+id/txtpasswordlogin"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginTop="16dp"
+                    android:background="@null"
+                    android:hint="Password"
+                    android:inputType="textPassword"
+                    android:textStyle="bold"
+                    app:layout_constraintLeft_toRightOf="@+id/imageView8"
+                    app:layout_constraintTop_toBottomOf="@+id/view6" />
+            </android.support.constraint.ConstraintLayout>
 
         </LinearLayout>
 
