--- a/app/src/main/res/layout/activity_show_details_user.xml
+++ b/app/src/main/res/layout/activity_show_details_user.xml
@@ -18,13 +18,13 @@
             android:id="@+id/appBarLayout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:theme="@style/AppTheme.AppBarOverlay"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="0dp"
-            android:layout_marginRight="0dp"
-            app:layout_constraintRight_toRightOf="parent"
             android:layout_marginLeft="0dp"
-            app:layout_constraintLeft_toLeftOf="parent">
+            android:layout_marginRight="0dp"
+            android:layout_marginTop="0dp"
+            android:theme="@style/AppTheme.AppBarOverlay"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar_show_people_details"
@@ -39,116 +39,71 @@
             android:id="@+id/image_user_profile"
             android:layout_width="@dimen/_120dp"
             android:layout_height="@dimen/_120dp"
-            android:src="@drawable/profile_pic"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginTop="@dimen/_8dp"
-            app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="@dimen/_8dp" />
-
-        <ImageView
-            android:id="@+id/figure_2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintLeft_toRightOf="@+id/image_user_profile"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/image_user_profile"
-            app:srcCompat="@drawable/figure_2" />
-
-        <ImageView
-            android:id="@+id/figure_1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/image_user_profile"
-            app:layout_constraintTop_toTopOf="@+id/image_user_profile"
-            app:srcCompat="@drawable/figure_1" />
-
-
-        <ImageView
-            android:id="@+id/figure_3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="@+id/image_user_profile"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintLeft_toRightOf="@+id/image_user_profile"
-            app:layout_constraintRight_toRightOf="parent"
-            app:srcCompat="@drawable/figure_3" />
-
-
-        <ImageView
-            android:id="@+id/figure_4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="@+id/image_user_profile"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/image_user_profile"
-            app:srcCompat="@drawable/figure4" />
-
-        <TextView
-            android:id="@+id/text_history_user_profile"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/_8dp"
+            android:layout_marginLeft="@dimen/_8dp"
+            android:layout_marginRight="@dimen/_8dp"
             android:layout_marginTop="@dimen/_8dp"
-            android:text="History"
-            android:textStyle="bold"
+            android:src="@drawable/profile_pic"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.583"
-            app:layout_constraintLeft_toLeftOf="@+id/figure_4"
-            app:layout_constraintRight_toRightOf="@+id/figure_4"
-            app:layout_constraintTop_toBottomOf="@+id/figure_4"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />
 
         <TextView
             android:id="@+id/text_location_user_profile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/_8dp"
-            android:layout_marginTop="@dimen/_8dp"
+            android:layout_marginBottom="0dp"
+            android:layout_marginLeft="@dimen/_8dp"
             android:text="Location"
+            android:textSize="@dimen/_15sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.533"
-            app:layout_constraintLeft_toLeftOf="@+id/figure_3"
-            app:layout_constraintRight_toRightOf="@+id/figure_3"
-            app:layout_constraintTop_toBottomOf="@+id/figure_3"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintBottom_toBottomOf="@+id/image_user_profile"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toLeftOf="@+id/image_user_profile" />
 
+        <TextView
+            android:id="@+id/username_user_profile"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="0dp"
+            android:layout_marginRight="@dimen/_8dp"
+            android:text="Name"
+            android:textSize="@dimen/_15sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@+id/image_user_profile"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintLeft_toRightOf="@+id/image_user_profile"
+            app:layout_constraintRight_toRightOf="parent" />
 
         <TextView
             android:id="@+id/text_causes_user_profile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/_8dp"
-            android:layout_marginTop="@dimen/_8dp"
+            android:layout_marginLeft="@dimen/_8dp"
+            android:layout_marginTop="0dp"
             android:text="268k My causes"
+            android:textSize="@dimen/_15sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@+id/figure_1"
-            app:layout_constraintHorizontal_bias="0.575"
-            app:layout_constraintLeft_toLeftOf="@+id/figure_1"
-            app:layout_constraintRight_toRightOf="@+id/figure_1"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0" />
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toLeftOf="@+id/image_user_profile"
+            app:layout_constraintTop_toTopOf="@+id/image_user_profile" />
 
         <TextView
             android:id="@+id/text_reviews_user_profile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/_8dp"
-            android:layout_marginTop="@dimen/_8dp"
+            android:layout_marginRight="@dimen/_8dp"
+            android:layout_marginTop="0dp"
             android:text="192k Reviews"
+            android:textSize="@dimen/_15sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@+id/figure_2"
-            app:layout_constraintHorizontal_bias="0.36"
-            app:layout_constraintLeft_toLeftOf="@+id/figure_2"
-            app:layout_constraintRight_toRightOf="@+id/figure_2"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0" />
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintLeft_toRightOf="@+id/image_user_profile"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/image_user_profile" />
 
     </android.support.constraint.ConstraintLayout>
 
@@ -162,7 +117,7 @@
             android:id="@+id/list_hiscauses"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="@dimen/_8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -175,8 +130,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/_8dp"
-            android:layout_marginLeft="9dp"
-            android:layout_marginRight="9dp"
+            android:layout_marginLeft="@dimen/_8dp"
+            android:layout_marginRight="@dimen/_8dp"
             android:layout_marginStart="@dimen/_8dp"
             android:layout_marginTop="@dimen/_8dp"
             android:text="His causes"
