--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -18,134 +18,71 @@
             android:id="@+id/image_profile"
             android:layout_width="@dimen/_120dp"
             android:layout_height="@dimen/_120dp"
+            android:layout_marginBottom="@dimen/_8dp"
+            android:layout_marginLeft="@dimen/_8dp"
+            android:layout_marginRight="@dimen/_8dp"
+            android:layout_marginTop="@dimen/_8dp"
             android:src="@drawable/profile_pic"
-            app:layout_constraintBottom_toTopOf="@+id/username_profile"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/username_profile"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/_8dp"
-            android:layout_marginEnd="@dimen/_8dp"
-            android:layout_marginLeft="@dimen/_8dp"
-            android:layout_marginRight="@dimen/_8dp"
-            android:layout_marginStart="@dimen/_8dp"
-            android:text="Name"
-            android:textSize="@dimen/_20sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent" />
-
-        <ImageView
-            android:id="@+id/figure_2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintLeft_toRightOf="@+id/image_profile"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/image_profile"
-            app:srcCompat="@drawable/figure_2" />
-
-        <ImageView
-            android:id="@+id/figure_1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/image_profile"
-            app:layout_constraintTop_toTopOf="@+id/image_profile"
-            app:srcCompat="@drawable/figure_1" />
-
-
-        <ImageView
-            android:id="@+id/figure_3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="@+id/image_profile"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintLeft_toRightOf="@+id/image_profile"
-            app:layout_constraintRight_toRightOf="parent"
-            app:srcCompat="@drawable/figure_3" />
-
-
-        <ImageView
-            android:id="@+id/figure_4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="@+id/image_profile"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/image_profile"
-            app:srcCompat="@drawable/figure4" />
-
-        <TextView
-            android:id="@+id/text_history_profile"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/_8dp"
-            android:layout_marginTop="@dimen/_8dp"
-            android:text="History"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.583"
-            app:layout_constraintLeft_toLeftOf="@+id/figure_4"
-            app:layout_constraintRight_toRightOf="@+id/figure_4"
-            app:layout_constraintTop_toBottomOf="@+id/figure_4"
-            app:layout_constraintVertical_bias="0.0" />
-
-        <TextView
             android:id="@+id/text_location_profile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/_8dp"
-            android:layout_marginTop="@dimen/_8dp"
+            android:layout_marginBottom="0dp"
+            android:layout_marginLeft="@dimen/_8dp"
             android:text="Location"
+            android:textSize="@dimen/_15sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.533"
-            app:layout_constraintLeft_toLeftOf="@+id/figure_3"
-            app:layout_constraintRight_toRightOf="@+id/figure_3"
-            app:layout_constraintTop_toBottomOf="@+id/figure_3"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintBottom_toBottomOf="@+id/image_profile"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toLeftOf="@+id/image_profile" />
 
+        <TextView
+            android:id="@+id/username_profile"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="0dp"
+            android:layout_marginRight="@dimen/_8dp"
+            android:text="Name"
+            android:textSize="@dimen/_15sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@+id/image_profile"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintLeft_toRightOf="@+id/image_profile"
+            app:layout_constraintRight_toRightOf="parent" />
 
         <TextView
             android:id="@+id/text_causes_profile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/_8dp"
-            android:layout_marginLeft="0dp"
-            android:layout_marginRight="0dp"
-            android:layout_marginTop="@dimen/_8dp"
+            android:layout_marginLeft="@dimen/_8dp"
+            android:layout_marginTop="0dp"
             android:text="268k My causes"
+            android:textSize="@dimen/_15sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@+id/figure_1"
-            app:layout_constraintHorizontal_bias="0.575"
-            app:layout_constraintLeft_toLeftOf="@+id/figure_1"
-            app:layout_constraintRight_toRightOf="@+id/figure_1"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0" />
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toLeftOf="@+id/image_profile"
+            app:layout_constraintTop_toTopOf="@+id/image_profile" />
 
         <TextView
             android:id="@+id/text_reviews_profile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/_8dp"
-            android:layout_marginLeft="0dp"
-            android:layout_marginRight="0dp"
-            android:layout_marginTop="@dimen/_8dp"
+            android:layout_marginRight="@dimen/_8dp"
+            android:layout_marginTop="0dp"
             android:text="192k Reviews"
+            android:textSize="@dimen/_15sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@+id/figure_2"
-            app:layout_constraintHorizontal_bias="0.36"
-            app:layout_constraintLeft_toLeftOf="@+id/figure_2"
-            app:layout_constraintRight_toRightOf="@+id/figure_2"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0" />
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintLeft_toRightOf="@+id/image_profile"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/image_profile" />
 
         <Button
             android:id="@+id/btn_heart"
@@ -156,10 +93,10 @@
             android:layout_marginRight="@dimen/_8dp"
             android:layout_marginTop="@dimen/_8dp"
             android:background="@drawable/like_heart"
-            app:layout_constraintBottom_toTopOf="@+id/figure_3"
+            app:layout_constraintBottom_toTopOf="@+id/text_location_profile"
             app:layout_constraintLeft_toRightOf="@+id/image_profile"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/figure_2" />
+            app:layout_constraintTop_toBottomOf="@+id/text_reviews_profile" />
 
         <Button
             android:id="@+id/btn_add_cause"
@@ -170,10 +107,10 @@
             android:layout_marginRight="@dimen/_8dp"
             android:layout_marginTop="@dimen/_8dp"
             android:background="@drawable/add_cause"
-            app:layout_constraintBottom_toTopOf="@+id/figure_4"
+            app:layout_constraintBottom_toTopOf="@+id/username_profile"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toLeftOf="@+id/image_profile"
-            app:layout_constraintTop_toBottomOf="@+id/figure_1" />
+            app:layout_constraintTop_toBottomOf="@+id/text_causes_profile" />
 
     </android.support.constraint.ConstraintLayout>
 
