3mlt el fr2 ben el joined wel causes w 3mlt ele fel home fragment

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,12 +2,14 @@
 <resources>
     <color name="colorPrimary">#000000</color>
     <color name="colorPrimaryDark">#000000</color>
-    <color name="colorAccent">#ffa500</color>
+    <color name="colorAccent">#fe860e</color>
+
+    <!--ffa500-->
 
     <color name="tab_disable">#979797</color>
     <color name="tab_enable">#FFFFFF</color>
 
-    <color name="tab_checked">#ffa500</color>
+    <color name="tab_checked">#fe860e</color>
     <color name="tab_unchecked">#FFFFFF</color>
 
 </resources>
