--- a/app/src/main/res/layout/item_in_home.xml
+++ b/app/src/main/res/layout/item_in_home.xml
@@ -23,10 +23,10 @@
         android:id="@+id/image_switch"
         android:layout_width="@dimen/_50dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="@dimen/_8dp"
+        android:layout_marginBottom="0dp"
         android:layout_marginRight="0dp"
-        android:layout_marginTop="@dimen/_8dp"
-        android:background="@drawable/side"
+        android:layout_marginTop="0dp"
+        android:background="@drawable/open_side"
         android:src="@drawable/download_right"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/linearLayout12"
@@ -60,7 +60,7 @@
         android:layout_marginBottom="0dp"
         android:layout_marginRight="0dp"
         android:layout_marginTop="0dp"
-        android:background="@drawable/rectangle_shape"
+        android:background="#fe860e"
         android:orientation="vertical"
         android:padding="@dimen/_8dp"
         android:visibility="gone"
